--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
 body {
 	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 300;
-	background-image: #E6E8E6;
+	background-image: repeating-linear-gradient(90deg, #fff, #fff 20px, #fbfbfb 20px, #fbfbfb 40px);
     font-size: 16px;
 }
 
