--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
 body {
 	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 300;
-	background-image: repeating-linear-gradient(90deg, #fff, #fff 20px, #fbfbfb 20px, #fbfbfb 40px);
+	background-image: #E6E8E6;
     font-size: 16px;
 }
 
@@ -21,6 +21,10 @@ img {
 
 a {
 	text-decoration: none;
+}
+
+h2 p{
+	font-family: 'Roboto Condensed', sans-serif; 
 }
 
 .contenedor {
@@ -82,6 +86,7 @@ a {
 	background: #000;
 	color: #fff;
 }
+
 
 /* ---------- Articulos ----------*/
 .articulo {
@@ -148,7 +153,12 @@ a {
 	color: #fff;
 }
 
-.destacado .titulo::after {
+.contenedor-thumbnail{
+	box-shadow: 0px 0px 26px 9px #ffffff2e;
+  	transition: background ease 600ms;
+}
+
+.destacado .titulo:after {
 	content: '';
 	margin: 0.625em 0; 
 	display: block;
@@ -241,16 +251,16 @@ a {
 
 
 
+/*---------- MEDIA QUERIES ----------*/
 
 
-
-@media (max-width: 1200px) {
+@media screen and (max-width: 1200px) {
     body{
         font-size: 14px;
     }
 }
 
-@media (max-width: 992px) {
+@media screen and (max-width: 992px) {
     body{
         font-size: 16px;
     }
@@ -265,7 +275,7 @@ a {
 
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     
     .articulo.destacado {
         grid-template-columns: 1fr;
@@ -274,7 +284,7 @@ a {
 
 }
 
-@media (max-width: 576px ) {
+@media screen and (max-width: 576px ) {
     body{
         font-size: 12px;
     }
@@ -336,7 +346,8 @@ a {
 
           /*FIN HISTORIA*/
 
-          /* MULTIMEDIA*/
+/*---------- MULTIMEDIA ----------*/
+
 .contenedor_imagen{
 	width: 90%;
 	max-width: 75em;
@@ -371,7 +382,8 @@ a {
 }
 
 
-          /* FIN MULTIMEDIA*/
+
+/*---------- MULTIMEDIA ----------*/
 
           /* TIENDA*/
   /*        
