cambios en sass1

--- a/sass/misc/_normalize.scss
+++ b/sass/misc/_normalize.scss
@@ -5,10 +5,10 @@
 }
 
 body {
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: $font-principal;
 	font-weight: 300;
-	background-image: repeating-linear-gradient(90deg, #fff, #fff 20px, #fbfbfb 20px, #fbfbfb 40px);
-    font-size: 16px;
+	background-image: $base;
+    
 }
 
 img {
