--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,24 @@
 
+:root{
+	/* ---------- COLORS ----------*/
+	--primary: #02010A;
+	--secondary: #868B8D;
+	--text-color: #02010A;
+	--text-color-alternative: #FFF8F0;
+	--base: #E6E8E6;
+	--base-grid: #fff;
+	--btn-link: #262626;
+
+	/* ---------- FONT FAMILY ----------*/
+	--font-principal: 'Roboto Condensed', sans-serif;
+	--font-secondary: 'Roboto Condensed', sans-serif;
+
+	/* ---------- FONT SIZES ----------*/
+	--text-large: 1.56em;
+	--text-medium: 1.25em;
+	--text-small: 1em;
+	
+}
 
 * {
 	margin: 0;
@@ -7,10 +27,9 @@
 }
 
 body {
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: var(--font-principal);
 	font-weight: 300;
-	background-image: repeating-linear-gradient(90deg, #fff, #fff 20px, #fbfbfb 20px, #fbfbfb 40px);
-    font-size: 16px;
+	background-image: var(--base);
 }
 
 img {
@@ -21,6 +40,7 @@ img {
 
 a {
 	text-decoration: none;
+	font-family: var(--font-secondary);
 }
 
 .contenedor {
@@ -44,7 +64,7 @@ a {
 .header {
 	grid-area: header;
 	padding: 20px;
-	background: #fff;
+	background: var(--base-grid);
 	box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
 }
 
@@ -59,15 +79,15 @@ a {
 
 
 .menu {
-	border-top: 1px solid #000;
-	border-bottom: 1px solid #000;
+	border-top: 1px solid var(--primary);
+	border-bottom: 1px solid var(--primary);
 	display: flex;
 	justify-content: space-between;
 }
 
 .menu a {
 	padding: 5px;
-	color: #000;
+	color: var(--primary);
 	display: block;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -75,18 +95,18 @@ a {
 	width: 100%;
 	text-align: center;
 	transition: 0.2s ease all;
-	font-size: 1em;
+	font-size: var(--text-small);
 }
 
 .menu a:hover {
-	background: #000;
-	color: #fff;
+	background: var(--primary);
+	color: var(--base-grid);
 }
 
 /* ---------- ARTICULOS ----------*/
 .articulo {
 	display: flex;
-	background: #fff;
+	background: var(--base-grid);
 	box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
 }
 
@@ -105,28 +125,28 @@ a {
 
 .articulo .titulo {
 	margin-bottom: 0.625rem;
-	font-size: 1.56em;
+	font-size: var(--text-large);
 }
 
 .articulo .titulo a {
 	font-weight: 400;
-	color: #000;
+	color: var(--text-color);
 }
 
 
 .articulo .extracto {
-	font-size: 1.25em; 
+	font-size: var(--text-medium); 
 	line-height: 1.5625rem; 
 	font-weight: 300;
 	margin-bottom: 1.25rem; 
-	color: #868b8d;
+	color: var(--secondary);
 }
 
 /* ---------- ARTICULO DESTACADO ----------*/
 .articulo.destacado {
 	grid-area: destacado;
-	color: white;
-	background-color: #000;
+	color: var(--base-grid);
+	background-color: var(--primary);
 	box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
     display: grid;
 	grid-template-columns: 1.3fr 1fr;
@@ -144,32 +164,32 @@ a {
 }
 
 .destacado .titulo a {
-	color: #fff;
+	color: var(--base-grid);
 }
 
 .destacado .titulo::after {
 	content: '';
 	margin: 0.625em 0; 
 	display: block;
-	background-color: #868686;
+	background-color: var(--base);
 	width: 6em; 
 	height: 1px;
 }
 
 .btn-link {
-	color: #fff;
+	color: var(--base-grid);
 	cursor: pointer;
 	display: inline-block;
 	padding: 0.625em; 
-	background-color: #262626;
-	font-size: 1em; 
+	background-color: var(--btn-link);
+	font-size: var(--text-small); 
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	align-self: flex-end;
 }
 
 .btn-link:hover {
-	background: #000;
+	background: var(--primary);
 	text-decoration: none;
 }
 
@@ -187,8 +207,8 @@ a {
 	text-align: center;
 	min-height: 100px; 
 	grid-area: aside;
-	background: #000;
-	color: #868b8d;
+	background: var(--primary);
+	color: var(--secondary);
 	box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
 }
 
@@ -208,20 +228,19 @@ a {
 .sidebar .menu {
 	width: 100%;
 	display: inline-block;
-	background: #ccc;
 }
 
 .sidebar .menu a {
 	padding: 25px; 
-	color: #fff;
-	background-color: #000;
+	color: var(--base);
+	background-color: var(--primary);
 	display: block;
-	font-size: 1em;
+	font-size: var(--text-small);
 	text-transform: uppercase;
 }
 
 .sidebar .menu a:hover {
-	background: #262626;
+	background: var(--btn-link);
 }
 
 
@@ -229,7 +248,7 @@ a {
 
 /*---------- FOOTER ----------*/
 .contenedor .footer {
-	background: #fff;
+	background: var(--base-grid);
 	font-size: 20px; 
 	grid-area: footer;
 	padding: 25px; 
@@ -352,7 +371,7 @@ a {
 
 }
 .contenedor_imagen .footer{
-	background: #fff;
+	background: var(--base-grid);
 	font-size: 20px; 
 	grid-area: footer;
 	padding: 25px; 
