--- a/css/translated.css
+++ b/css/translated.css
@@ -1,14 +1,16 @@
 /* ---------- MISC ----------*/
+/* ---------- COLORS ----------*/
+/* ---------- FONT FAMILY ----------*/
+/* ---------- FONT SIZES ----------*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
 
 body {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-weight: 300;
-  background-image: repeating-linear-gradient(90deg, #fff, #fff 20px, #fbfbfb 20px, #fbfbfb 40px);
-  font-size: 16px; }
+  background-image: #E6E8E6; }
 
 img {
   width: 100%;
@@ -49,14 +51,14 @@ a {
   width: 300px; }
 
 .menu {
-  border-top: 1px solid #000;
-  border-bottom: 1px solid #000;
+  border-top: 1px solid #02010A;
+  border-bottom: 1px solid #02010A;
   display: flex;
   justify-content: space-between; }
 
 .menu__a {
   padding: 5px;
-  color: #000;
+  color: #02010A;
   display: block;
   text-decoration: none;
   text-transform: uppercase;
@@ -67,7 +69,7 @@ a {
   font-size: 1em; }
 
 .menu__a:hover {
-  background: #000;
+  background: #02010A;
   color: #fff; }
 
 .sidebar {
@@ -75,8 +77,8 @@ a {
   text-align: center;
   min-height: 100px;
   grid-area: aside;
-  background: #000;
-  color: #868b8d;
+  background: #02010A;
+  color: #868B8D;
   box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2); }
 
 .sidebar__acerca-de img {
@@ -97,8 +99,8 @@ a {
 
 .sidebar__menu a {
   padding: 25px;
-  color: #fff;
-  background-color: #000;
+  color: #E6E8E6;
+  background-color: #02010A;
   display: block;
   font-size: 1em;
   text-transform: uppercase; }
@@ -138,20 +140,20 @@ a {
 
 .articulo__titulo a {
   font-weight: 400;
-  color: #000; }
+  color: #02010A; }
 
 .articulo__extracto {
   font-size: 1.25em;
   line-height: 1.5625rem;
   font-weight: 300;
   margin-bottom: 1.25rem;
-  color: #868b8d; }
+  color: #868B8D; }
 
 /* ---------- ARTICULO DESTACADO ----------*/
 .articulo.destacado {
   grid-area: destacado;
-  color: white;
-  background-color: #000;
+  color: #fff;
+  background-color: #02010A;
   box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
   display: grid;
   grid-template-columns: 1.3fr 1fr; }
@@ -172,7 +174,7 @@ a {
   content: '';
   margin: 0.625em 0;
   display: block;
-  background-color: #868686;
+  background-color: #E6E8E6;
   width: 6em;
   height: 1px; }
 
@@ -188,7 +190,7 @@ a {
   align-self: flex-end; }
 
 .articulo.destacado__btn-link:hover {
-  background: #000;
+  background: #02010A;
   text-decoration: none; }
 
 /*---------- CONTENIDO ----------*/
