--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,7 @@
 /* ---------- ARTICULOS ----------*/
 .articulo {
     display: flex;
-    background: #fff;
+    background: $base-grid;
     box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2); }
     .articulo__contenedor-texto {
       padding: 20px;
@@ -14,22 +14,22 @@
       width: 50%; }
     .articulo__titulo {
       margin-bottom: 0.625rem;
-      font-size: 1.56em; }
+      font-size: $text-large; }
     .articulo__titulo a {
       font-weight: 400;
-      color: #000; }
+      color: $text-color; }
     .articulo__extracto {
-      font-size: 1.25em;
+      font-size: $text-medium; 
       line-height: 1.5625rem;
       font-weight: 300;
       margin-bottom: 1.25rem;
-      color: #868b8d; }
+      color: $secondary; }
   
   /* ---------- ARTICULO DESTACADO ----------*/
   .articulo.destacado {
     grid-area: destacado;
-    color: white;
-    background-color: #000;
+    color: $base-grid;
+    background-color:  $primary;
     box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2);
     display: grid;
     grid-template-columns: 1.3fr 1fr; }
@@ -41,26 +41,26 @@
       width: 100%;
       height: 100%; }
     .articulo.destacado .destacado .titulo a {
-      color: #fff; }
+      color: $base-grid; }
     .articulo.destacado .destacado .titulo::after {
       content: '';
       margin: 0.625em 0;
       display: block;
-      background-color: #868686;
+      background-color: $base;
       width: 6em;
       height: 1px; }
     .articulo.destacado .btn-link {
-      color: #fff;
+      color: $base-grid;
       cursor: pointer;
       display: inline-block;
       padding: 0.625em;
-      background-color: #262626;
-      font-size: 1em;
+      background-color: $btn-link;
+      font-size:  $text-small;
       text-transform: uppercase;
       letter-spacing: 1px;
       align-self: flex-end; }
     .articulo.destacado__btn-link:hover {
-      background: #000;
+      background: $primary;
       text-decoration: none; }
   
   /*---------- CONTENIDO ----------*/
