--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,8 +1,7 @@
 .contenedor .footer {
-    background: #fff;
+    background: $base-grid;
     font-size: 20px;
     grid-area: footer;
     padding: 25px;
     text-align: right;
     box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2); }
-  
