--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,7 +1,7 @@
 .header {
     grid-area: header;
     padding: 20px;
-    background: #fff;
+    background: $base-grid;
     box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2); }
     .header__logo {
       margin: auto;
@@ -9,13 +9,13 @@
       width: 300px; }
   
   .menu {
-    border-top: 1px solid #000;
-    border-bottom: 1px solid #000;
+    border-top: 1px solid $primary;
+    border-bottom: 1px solid $primary;
     display: flex;
     justify-content: space-between; }
     .menu__a {
       padding: 5px;
-      color: #000;
+      color:  $primary;
       display: block;
       text-decoration: none;
       text-transform: uppercase;
@@ -23,7 +23,7 @@
       width: 100%;
       text-align: center;
       transition: 0.2s ease all;
-      font-size: 1em; }
+      font-size: $text-small; }
     .menu__a:hover {
-      background: #000;
-      color: #fff; }
+      background:  $primary;
+      color: $base-grid; }
