--- a/sass/partials/_sidebar.scss
+++ b/sass/partials/_sidebar.scss
@@ -3,8 +3,8 @@
     text-align: center;
     min-height: 100px;
     grid-area: aside;
-    background: #000;
-    color: #868b8d;
+    background: $primary;
+    color: $secondary;
     box-shadow: 0px 0px 70px rgba(102, 102, 102, 0.2); }
     .sidebar__acerca-de img {
       border-radius: 100%;
@@ -21,10 +21,10 @@
       background: #ccc; }
     .sidebar__menu a {
       padding: 25px;
-      color: #fff;
-      background-color: #000;
+      color: $base;
+      background-color: $primary;
       display: block;
-      font-size: 1em;
+      font-size: $text-small;
       text-transform: uppercase; }
     .sidebar__menu a:hover {
-      background: #262626; }
+      background: $btn-link; }
